# video-processor

./: .env.example  .gitignore  Justfile  LICENSE  alembic.ini  mypy.ini  pyproject.toml
src/app/: __init__.py  __main__.py  api.py  metadata.py
src/app/core/: config.py  logging.py
src/migrations/: env.py
